src/test/resources/purescript_examples/failing/OrphanTypeDecl.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith OrphanTypeDeclaration\n')
  PSASTWrapperElement(Program)
    PSASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(ModuleName)
        PSASTWrapperElement(Qualified)
          PsiElement(proper name)('OrphanTypeDecl')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(TypeDeclaration)
        PSASTWrapperElement(TypeAnnotationName)
          PsiElement(identifier)('fn')
          PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Type)
          PSASTWrapperElement(TypeAtom)
            PSASTWrapperElement(TypeConstructor)
              PSASTWrapperElement(Qualified)
                PSASTWrapperElement(TypeConstructor)
                  PsiElement(proper name)('Number')
                  PsiElement(whitespace)(' ')
          PsiElement(->)('->')
          PsiElement(whitespace)(' ')
          PSASTWrapperElement(Type)
            PSASTWrapperElement(TypeAtom)
              PSASTWrapperElement(TypeConstructor)
                PSASTWrapperElement(Qualified)
                  PSASTWrapperElement(TypeConstructor)
                    PsiElement(proper name)('Boolean')
                    PsiElement(whitespace)('\n')
